# JvGame_SDL

./: CMakeLists.txt  JvGame.sln
JvGame/: Coin.cpp  CreateState.cpp  ExitDoor.cpp  GameState.cpp  GameState.h  Hero.cpp  HomeState.cpp  HomeState.h  JvGame.vcxproj  JvGame.vcxproj.filters  KeyObj.cpp  LogoState.cpp  Makefile  Makefile.cross  PassState.cpp  PassState.h  SelectState.cpp  SelectState.h  StartState.cpp  TestState.cpp  TestState.h  main.cpp
JvGame/JvGame/: JvButton.cpp  JvButton.h  JvCamera.cpp  JvCamera.h  JvEmitter.cpp  JvEmitter.h  JvG.cpp  JvG.h  JvGame.cpp  JvGame.h  JvH.h  JvJoystick.cpp  JvJoystick.h  JvSave.cpp  JvSound.cpp  JvSound.h  JvSprite.cpp  JvSprite.h  JvState.cpp  JvState.h  JvText.cpp  JvText.h  JvTextPad.cpp  JvTextPad.h  JvTilemap.cpp  JvTilemap.h  JvU.cpp  JvU.h
JvGame/Resources/: config.ini  supercartiosave.sav
